@@ -4479,8 +4479,16 @@ static int hook_fixup(request_rec *r)
      *  remember the current filename before rewriting for later check
      *  to prevent deadlooping because of internal redirects
      *  on final URL/filename which can be equal to the inital one.
+     *  also, we'll restore original r->filename if we decline this
+     *  request
      */
     ofilename = r->filename;
+
+    if (r->filename == NULL) {
+        r->filename = apr_pstrdup(r->pool, r->uri);
+        rewritelog((r, 2, "init rewrite engine with requested uri %s",
+                    r->filename));
+    }
 
     /*
      *  now apply the rules ...
@@ -4627,7 +4635,7 @@ static int hook_fixup(request_rec *r)
              * use the following internal redirection stuff because
              * this would lead to a deadloop.
              */
-            if (strcmp(r->filename, ofilename) == 0) {
+            if (ofilename != NULL && strcmp(r->filename, ofilename) == 0) {
                 rewritelog((r, 1, dconf->directory, "initial URL equal rewritten"
                             " URL: %s [IGNORING REWRITE]", r->filename));
                 return OK;
@@ -4680,6 +4688,7 @@ static int hook_fixup(request_rec *r)
     }
     else {
         rewritelog((r, 1, dconf->directory, "pass through %s", r->filename));
+        r->filename = ofilename;
         return DECLINED;
     }
 }
